syntax ="proto3";

package base;

import "third_party/proto/gogoproto/gogo.proto";
import "proto/identities/transactions/quash/request.proto";
import "proto/identities/transactions/quash/response.proto";



option go_package = "modules/identities/internal/transactions/quash";

service Msg {

    rpc identitiesQuash(transactionRequest) returns (transactionResponse);

}
message message {
    option (gogoproto.goproto_getters) = false;
    option (gogoproto.equal)            = false;

    string from =1 [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.AccAddress", (gogoproto.nullable) = false] ;
    string fromID =2 [(gogoproto.customtype) = "github.com/persistenceOne/persistenceSDK/schema/types.ID", (gogoproto.nullable) = false] ;
    string identityID =3 [(gogoproto.customtype) = "github.com/persistenceOne/persistenceSDK/schema/types.ID", (gogoproto.nullable) = false] ;
    
}

